--- a/raster/index.html
+++ b/raster/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h2>Raster Project: Magazine Cover Sept 2021</h2>
-	  <br><img src="MagCover.jpg" width"900" height"1164"></br>
+	  <br><img src="MagCover.jpg" width="900" height="1164"></br>
   </div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
