--- a/raster/index.html
+++ b/raster/index.html
@@ -19,7 +19,7 @@
 	  <br><img src="MagCover.jpg" width="900" height="1164"></br>
 	  <h2>Raster Project: Image Merging Sept 2021</h2>
 	  <br><img src="turtleplane.png" width="600" height="900"></br>
-	  <br><img src="jujuwaterfall.png" width="600" height="900"></br>
+	  <br><img src="orangewaterfall.png" width="600" height="900"></br>
   </div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
