--- a/raster/index.html
+++ b/raster/index.html
@@ -17,8 +17,8 @@
   <div class="content">
 	  <h2>Raster Project: Magazine Cover Sept 2021</h2>
 	  <br><img src="MagCover.jpg" width="900" height="1164"></br>
-	  <h2>Raster Project: Image Merging Sept 2021</h2>
-	  <br><img src="turtleplane.png" width="600" height="900"></br>
+	  <h2>Raster Project: Image Mergings Sept 2021</h2>
+	  <br><img src="turtplane.png" width="600" height="900"></br>
 	  <br><img src="orangewaterfall.png" width="600" height="900"></br>
   </div>
   <div class="footer">
