--- a/raster/index.html
+++ b/raster/index.html
@@ -20,6 +20,7 @@
 	  <h2>Raster Project: Image Mergings Sept 2021</h2>
 	  <br><img src="turtplane.png" width="600" height="900"></br>
 	  <br><img src="orangewaterfall.png" width="600" height="900"></br>
+	  <br><img src="turtlespace.png" width="600" height="900"></br>
   </div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
