--- a/aboutme.html
+++ b/aboutme.html
@@ -9,13 +9,12 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>About Me</h1>
+  	<img src="raster/aboutmeheader.png">
   </div>
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a></h3>
   </div>
-  <div class="content">
-	  <img src="raster/aboutmeheader.png">
+  <div class="content">Hello Wrold!
   <div class="footer">
     <h4><a href="aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
