--- a/vector/index.html
+++ b/vector/index.html
@@ -14,7 +14,13 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a></h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+	  <h2>Vector Project: Flower of Life Nov 2021</h2>
+	  <br><img src="floweroflife1.png" width="1000" height="1000"></br>
+	  <h2>Vector Project: Watermark Nov 2021</h2>
+	  <br><img src="watermark1-02.png" width="1000" height="1000"></br>
+	  <h2>Vector Project: Cartoon Character Nov 2021</h2>
+	  <br><img src="cartooncharacter.png" width="750" height="1000"></br>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
