--- a/vector/index.html
+++ b/vector/index.html
@@ -21,6 +21,8 @@
 	  <br><img src="watermark1-02.png" width="1000" height="1000"></br>
 	  <h2>Vector Project: Cartoon Character Nov 2021</h2>
 	  <br><img src="cartooncharacter.png" width="750" height="1000"></br>
+	  <h2>Vector Project: Color Trace Image Nov 2021</h2>
+	  <br><img src="colorimagetraces-01.png" width="1000" height="1000"></br>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
