--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ function MM_swapImage() { //v3.0
 	  <h2>Raster Project: Album Cover Oct 2021</h2>
 	  <br><img src="20fallingflowers.png" width="900" height="900"></br>
 	  <h2>Raster Project: True Colors of Nature Dec 2021</h2>
-  	  <img src="truecolorsofnature.png" width="1000" height="1000" alt=""/> </div>
+	  <br><img src="truecolorsofnature.png" width="1000" height="1000"></br>
+</div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
