--- a/audio/index.html
+++ b/audio/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>Animation Projects</title>
+	<title>Audio Projects</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 <script type="text/javascript">
 function MM_swapImgRestore() { //v3.0
@@ -32,12 +32,16 @@ function MM_swapImage() { //v3.0
 <body onLoad="MM_preloadImages('../raster/webNav/home01.png','../raster/webNav/raster01.png','../raster/webNav/vector01.png','../raster/webNav/audio01.png','../raster/webNav/animation01.png','../raster/webNav/video01.png')">
 <div class="container">
   <div class="header">
-  	<img src="animationheader.png">
+  	<img src="audioheader.png">
   </div>
   <div class="nav">
-    <h3><a href="../index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Home','','../raster/webNav/home01.png',1)"><img src="../raster/webNav/home02.png" alt="Home" width="100" height="30" id="Home"></a><a href="../index.html"></a><a href="../video/index.html"></a><a href="../raster/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Raster','','../raster/webNav/raster01.png',1)"><img src="../raster/webNav/raster02.png" alt="Raster" width="100" height="30" id="Raster"></a><a href="../vector/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Vector','','../raster/webNav/vector01.png',1)"><img src="../raster/webNav/vector02.png" alt="Vector" width="100" height="30" id="Vector"></a><a href="../audio/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Audio','','../raster/webNav/audio01.png',1)"><img src="../raster/webNav/audio02.png" alt="Audio" width="100" height="30" id="Audio"></a><a href="index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Animation','','../raster/webNav/animation01.png',1)"><img src="../raster/webNav/animation02.png" alt="Animation" width="100" height="30" id="Animation"></a><a href="../video/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Video','','../raster/webNav/video01.png',1)"><img src="../raster/webNav/video02.png" alt="Video" width="100" height="30" id="Video"></a></h3>
+    <h3><a href="../index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Home','','../raster/webNav/home01.png',1)"><img src="../raster/webNav/home02.png" alt="Home" width="100" height="30" id="Home"></a><a href="../index.html"></a><a href="../video/index.html"></a><a href="../raster/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Raster','','../raster/webNav/raster01.png',1)"><img src="../raster/webNav/raster02.png" alt="Raster" width="100" height="30" id="Raster"></a><a href="../vector/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Vector','','../raster/webNav/vector01.png',1)"><img src="../raster/webNav/vector02.png" alt="Vector" width="100" height="30" id="Vector"></a><a href="index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Audio','','../raster/webNav/audio01.png',1)"><img src="../raster/webNav/audio02.png" alt="Audio" width="100" height="30" id="Audio"></a><a href="../animation/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Animation','','../raster/webNav/animation01.png',1)"><img src="../raster/webNav/animation02.png" alt="Animation" width="100" height="30" id="Animation"></a><a href="../video/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Video','','../raster/webNav/video01.png',1)"><img src="../raster/webNav/video02.png" alt="Video" width="100" height="30" id="Video"></a></h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+	  <p> 30 Second Audio Project</p>
+	  <audio controls>
+		  <source src="30secaudio.mp3" type="audio/mpeg">
+		  Audio tag is not supported in this browser. </audio>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
