--- a/audio/index.html
+++ b/audio/index.html
@@ -42,6 +42,10 @@ function MM_swapImage() { //v3.0
 	  <audio controls>
 		  <source src="30secaudio.mp3" type="audio/mpeg">
 		  Audio tag is not supported in this browser. </audio>
+	  <p> Favorite Meme Phrase </p>
+	  <audio controls>
+	  <source src="ZombieKidLikesTurtles.wav" type="audio/mpeg">
+	  Audio tag is not supported in this browser</audio>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
