--- a/animation/index.html
+++ b/animation/index.html
@@ -39,9 +39,9 @@ function MM_swapImage() { //v3.0
   </div>
   <div class="content">
 <h2>Animation Project: Animate Favorite Phrase</h2>
-<a href="favphrase.swf" title="Go to Phrase Animation">Favorite Phrase Animation</a>
+<a href="favphrase.swf" title="Download Phrase Animation">Favorite Phrase Animation</a>
 	  <h2>Animation Project: Walk Cycle</h2>
-<a href="walkcycle.swf" title="Go to Walk Cycle">Walk Cycle</a>
+<a href="walkcycle.swf" title="Download Walk Cycle">Walk Cycle</a>
 	</div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
