--- a/video/index.html
+++ b/video/index.html
@@ -37,7 +37,18 @@ function MM_swapImage() { //v3.0
   <div class="nav">
     <h3><a href="../index.html"></a><a href="../index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Home','','../raster/webNav/home01.png',1)"><img src="../raster/webNav/home02.png" alt="Home" width="100" height="30" id="Home"></a><a href="index.html"></a><a href="../raster/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Raster','','../raster/webNav/raster01.png',1)"><img src="../raster/webNav/raster02.png" alt="Raster" width="100" height="30" id="Raster"></a><a href="../vector/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Vector','','../raster/webNav/vector01.png',1)"><img src="../raster/webNav/vector02.png" alt="Vector" width="100" height="30" id="Vector"></a><a href="../audio/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Audio','','../raster/webNav/audio01.png',1)"><img src="../raster/webNav/audio02.png" alt="Audio" width="100" height="30" id="Audio"></a><a href="../animation/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Animation','','../raster/webNav/animation01.png',1)"><img src="../raster/webNav/animation02.png" alt="Animation" width="100" height="30" id="Animation"></a><a href="index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Video','','../raster/webNav/video01.png',1)"><img src="../raster/webNav/video02.png" alt="Video" width="100" height="30" id="Video"></a></h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+<html>
+<body>
+<h2>Video Project: Editing Intro</h2>
+<video width="320" height="240" controls>
+  <source src="editingintro.mp4" type="video/mp4">
+  <source src="editingintro.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+
+</body>
+</html></div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
