--- a/video/index.html
+++ b/video/index.html
@@ -42,7 +42,7 @@ function MM_swapImage() { //v3.0
 <body>
 <h2>Video Project: Editing Intro</h2>
 <video width="320" height="240" controls>
-  <source src="editingintro.mp4" type="video/mp4">
+  <source src="editingintro1.mp4" type="video/mp4">
   <source src="editingintro.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
