--- a/video/index.html
+++ b/video/index.html
@@ -41,12 +41,7 @@ function MM_swapImage() { //v3.0
 <html>
 <body>
 <h2>Video Project: Editing Intro</h2>
-<video width="320" height="240" controls>
-  <source src="editingintro1.mp4" type="video/mp4">
-  <source src="editingintro.ogg" type="video/ogg">
-  Your browser does not support the video tag.
-</video>
-
+<a href="editingintro1.mp4" title="Download Editing Intro">Editing Intro</a>
 </body>
 </html></div>
   <div class="footer">
