--- a/video/index.html
+++ b/video/index.html
@@ -40,10 +40,16 @@ function MM_swapImage() { //v3.0
   <div class="content">
 <html>
 <body>
-<h2>Video Project: Editing Intro</h2>
-<a href="editingintro1.mp4" title="Download Editing Intro">Editing Intro</a>
+<h2>Video Project: Video Editing Intro</h2>
+<video width="320" height="240" controls>
+  <source src="editingintro1.mp4" type="video/mp4">
+  <source src="editingintro.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+
 </body>
-</html></div>
+</html>
+</div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ashllam9612@granitesd.org">Contact</a> | Copyright 2021</h4>
   </div>
