--- a/video/index.html
+++ b/video/index.html
@@ -40,13 +40,18 @@ function MM_swapImage() { //v3.0
   <div class="content">
 <html>
 <body>
-<h2>Video Project: Video Editing Intro</h2>
+<h2>Video Project: Video Editing Intro May 2022</h2>
 <video width="320" height="240" controls>
   <source src="editingintro1.mp4" type="video/mp4">
   <source src="editingintro.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
-
+<h2>Video Project: Movie Trailer May 2022</h2>
+<video width="320" height="240" controls>
+  <source src="movietrailer.mp4" type="video/mp4">
+  <source src="movietrailer.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
 </body>
 </html>
 </div>
